# log4c

./: .gitignore  CMakeLists.txt  README.md
cmake/: log4cConfig.cmake.in
examples/: async.c  basic.c  from_config.c  log4c.conf  simple_example.c
include/: log4c.h
include/log4c/: log4c.h
src/: log4c.c
templates/minimal_app/: CMakeLists.txt  README.md  log4c.conf
templates/minimal_app/src/: main.c
tests/: test_log4c.c
